# NestedOT

./: .gitignore  Makefile  README.md  generate_path.cpp  header.h  header_main.h  main  main.bash  main.cpp  pyproject.toml  requirements.txt  setup.cfg  setup.py  solver.cpp  test.py  utils.cpp
aot_numerics/: mainfunctions.py  normal_ot.py
include/: header.h  header_main.h  header_solver.h  header_utils.h
lp/: EMD_wrapper  EMD_wrapper.cpp  tempCodeRunnerFile
notebooks/: compare_nested_dynamic.ipynb  convergence_gaussian.ipynb  demo.ipynb  example_of_use.ipynb  exemple_of_use.ipynb  solver_explain.ipynb  test.ipynb
pnot/: __init__.py  optimal_solver_markov.py  py_solver.py  solver.py  utils.py
src/: Makefile  emd_wrap.cpp  main  main.cpp  printer  printer.cpp  solver  solver.cpp  utils  utils.cpp  wrapper.cpp
src/include/: header_dist.h
tests/: test.py  test_1.py  test_2.py
