[build-system]
requires = [
    "setuptools >= 77.0.3",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

# [tool.cibuildwheel]
# test-command = "python {project}/tests/test.py"
# test-skip = "*universal2:arm64"

# [tool.ruff]
# target-version = "py37"

# [tool.ruff.lint]
# extend-select = [
#   "B",   # flake8-bugbear
#   "I",   # isort
#   "PGH", # pygrep-hooks
#   "RUF", # Ruff-specific
#   "UP",  # pyupgrade
# ]



# [project]
# name = "example_package_YOUR_USERNAME_HERE"
# version = "0.0.1"
# authors = [
#   { name="Example Author", email="author@example.com" },
# ]
# description = "A small example package"
# readme = "README.md"
# requires-python = ">=3.8"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent",
# ]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"