[build-system]
requires = [
    "setuptools >= 77.0.3",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pnot"
version = "0.0.1"
authors = [
  { name="Songyan Hou & Ruben Bontorno", email="justinhou95@gmail.com" },
]
description = "Python package for nested optimal transport"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/justinhou95/NestedOT"

[project.optional-dependencies]
test = ["pytest"]