[metadata]
name = pnot
version = 0.0.1
author = Ruben Bontorno & Songyan Hou
description = Nested Optimal Transport

[options]
packages = find:
python_requires = >=3.7
zip_safe = false

[options.extras_require]
test = pytest

[options.package_data]
* = *.h

[options.entry_points]
# 如果有 CLI 命令，可以在这写 console_scripts

[build_ext]
# 让 setuptools 使用环境变量中 CXX（Apple LLVM 支持时很重要）
inplace = 1

[tool.setuptools.packages.find]
where = .

[tool.setuptools.extension._wrapper]
sources =
    src/wrapper.cpp
    src/solver.cpp
    src/emd_wrap.cpp
    src/utils.cpp
    src/printer.cpp
include_dirs =
    src/include
    extern/eigen
define_macros =
    VERSION_INFO="0.0.1"
extra_compile_args =
    -std=c++17
    -Wall
    -Wno-unused-result
    -Wsign-compare
    -fvisibility=hidden
    -g0
    -mmacosx-version-min=10.14
    -Xpreprocessor
    -fopenmp
extra_link_args =
    -fopenmp
    -lomp
