[options]
packages = find:
python_requires = >=3.7
zip_safe = false

[options.extras_require]
test = pytest

[options.package_data]
* = *.h

[build_ext]
inplace = 1

[tool.setuptools.packages.find]
where = .

[tool.setuptools.extension._wrapper]
sources =
    src/wrapper.cpp
    src/solver.cpp
    src/emd_wrap.cpp
    src/utils.cpp
    src/printer.cpp
include_dirs =
    src/include
    extern/eigen
define_macros =
    VERSION_INFO="0.0.1"
extra_compile_args =
    -std=c++17
    -Wall
    -Wno-unused-result
    -Wsign-compare
    -fvisibility=hidden
    -g0
    -mmacosx-version-min=10.14
    -Xpreprocessor
    -fopenmp
extra_link_args =
    -fopenmp
    -lomp
